예외 처리 핸들러 추가, 수강 신청 중복 예외 처리 추가